--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@ mailto: naveenkumarreddy967@gmail.com
 
   <section class="card">
     <div class="card card-div">
+        <input type="checkbox" name="checkbox" id="checkbox" class="card__toggle">
+      <label class="checkbox__label" for="checkbox"></label>
       <div class="card__side card__front">
         <h1 class="card__heading">Hello, I'm frontside</h1>
       </div>
